# db-intelligence

./: .env.template  .gitignore  README.md  RETRIEVAL_README.md  pyproject.toml  requirements.txt  streamlit_app.py  test_retrieval.py
migrations/: 001_retrieval_setup.sql
src/: cli.py  column_picker.py  config.py  db.py  llm.py  retrieval.py  server.py  sql_agent.py  table_docs.py
tests/: test_agent_e2e.py
